--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,11 @@
   <li>
     <a [routerLink]="['/contact']" routerLinkActive="router-link-active">Contact</a> 
   </li>
+  <li>
+    <a [routerLink]="['/admin']" routerLinkActive="router-link-active">Admin</a> 
+  </li>
+  <li>
+    <a [routerLink]="['/admin/users']" routerLinkActive="router-link-active">Users</a> 
+  </li>
 </ul>
 <router-outlet></router-outlet>
